--- a/terra-zil/schema/config.json
+++ b/terra-zil/schema/config.json
@@ -1,15 +1,14 @@
 {
   "$schema": "http://json-schema.org/draft-07/schema#",
-  "title": "State",
+  "title": "Config",
   "type": "object",
   "required": [
-    "count",
+    "name",
     "owner"
   ],
   "properties": {
-    "count": {
-      "type": "integer",
-      "format": "int32"
+    "name": {
+      "type": "string"
     },
     "owner": {
       "$ref": "#/definitions/CanonicalAddr"
