--- a/terra-zil/Cargo.toml
+++ b/terra-zil/Cargo.toml
@@ -35,6 +35,7 @@ cranelift = ["cosmwasm-vm/default-cranelift"]
 singlepass = ["cosmwasm-vm/default-singlepass"]
 
 [dependencies]
+terra-cosmwasm = "1.1.0-alpha"
 cosmwasm-std = { version = "0.9.2" }
 cosmwasm-storage = { version = "0.9.2" }
 schemars = "0.7"
